Replace placeholder images with actual URLs

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <section class="hero" id="accueil">
         <div class="carousel">
             <div class="carousel-slide">
-                <img src="https://via.placeholder.com/1200x400" alt="Chaussure sportive 1">
+                <img src="https://images.unsplash.com/photo-1593070301444-b04b19a8a68c?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDd8fHNuaWtlcnN8ZW58MHx8fHwxNjg3Nzg0NzQ2&ixlib=rb-1.2.1&q=80&w=1080" alt="Chaussure sportive 1">
                 <div class="carousel-text">
                     <h2>Les dernières chaussures sportives</h2>
                     <p>Le confort et la performance à chaque pas !</p>
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="https://via.placeholder.com/1200x400" alt="Chaussure de ville 2">
+                <img src="https://images.unsplash.com/photo-1614736126269-0e5744b083ed?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDlfMnx8Zm9vdCUyMGxvY2tlc3xlbnwwfHx8fDE2ODc3ODQ3MTI&ixlib=rb-1.2.1&q=80&w=1080" alt="Chaussure de ville 2">
                 <div class="carousel-text">
                     <h2>Chic et Confort</h2>
                     <p>Des modèles tendance pour toutes les occasions.</p>
@@ -48,7 +48,7 @@
         <div class="produit-container">
             <!-- Produit 1 -->
             <div class="produit">
-                <img src="https://via.placeholder.com/300x300" alt="Produit 1">
+                <img src="https://images.unsplash.com/photo-1606948192643-9faac9370b77?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDd8fHNuaWtlcnN8ZW58MHx8fHwxNjg3Nzg0NzQ2&ixlib=rb-1.2.1&q=80&w=1080" alt="Produit 1">
                 <div class="produit-details">
                     <h3>Chaussure Sportive</h3>
                     <p>€99.99</p>
@@ -57,7 +57,7 @@
             </div>
             <!-- Produit 2 -->
             <div class="produit">
-                <img src="https://via.placeholder.com/300x300" alt="Produit 2">
+                <img src="https://images.unsplash.com/photo-1602604638991-ded1446c6f71?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHNuaWtlcnN8ZW58MHx8fHwxNjg3Nzg0NzQ2&ixlib=rb-1.2.1&q=80&w=1080" alt="Produit 2">
                 <div class="produit-details">
                     <h3>Chaussure Casual</h3>
                     <p>€89.99</p>
@@ -66,7 +66,7 @@
             </div>
             <!-- Produit 3 -->
             <div class="produit">
-                <img src="https://via.placeholder.com/300x300" alt="Produit 3">
+                <img src="https://images.unsplash.com/photo-1612129716877-0f3a7b4bcfd4?crop=entropy&cs=tinysrgb&fit=max&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDN8fHNuaWtlcnN8ZW58MHx8fHwxNjg3Nzg0NzQ2&ixlib=rb-1.2.1&q=80&w=1080" alt="Produit 3">
                 <div class="produit-details">
                     <h3>Chaussure de Ville</h3>
                     <p>€129.99</p>
