--- a/index.html
+++ b/index.html
@@ -1,190 +1,115 @@
-/* RESET DE BASE */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chaussures - Courir / Foot Locker</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <div class="logo">
+            <h1>Chaussures</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#produits">Nos Produits</a></li>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-/* Corps du site */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #fff; /* Blanc */
-    color: #333; /* Gris foncé pour le texte */
-}
+    <!-- Hero Section (Carrousel) -->
+    <section class="hero" id="accueil">
+        <div class="carousel">
+            <div class="carousel-slide">
+                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+Sportive+1" alt="Chaussure sportive 1">
+                <div class="carousel-text">
+                    <h2>Les dernières chaussures sportives</h2>
+                    <p>Le confort et la performance à chaque pas !</p>
+                </div>
+            </div>
+            <div class="carousel-slide">
+                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+Casual+2" alt="Chaussure de ville 2">
+                <div class="carousel-text">
+                    <h2>Chic et Confort</h2>
+                    <p>Des modèles tendance pour toutes les occasions.</p>
+                </div>
+            </div>
+            <div class="carousel-slide">
+                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+de+Ville+3" alt="Chaussure de ville 3">
+                <div class="carousel-text">
+                    <h2>Confort au Quotidien</h2>
+                    <p>Le style et la praticité réunis !</p>
+                </div>
+            </div>
+        </div>
+        <button class="prev">Précédent</button>
+        <button class="next">Suivant</button>
+    </section>
 
-/* Header */
-header {
-    background-color: #F44336; /* Rouge clair */
-    color: white;
-    padding: 15px 0;
-    text-align: center;
-}
+    <!-- Produits Section -->
+    <section id="produits">
+        <h2>Nos Produits</h2>
+        <div class="produit-container">
+            <!-- Produit 1 -->
+            <div class="produit">
+                <img src="https://via.placeholder.com/300" alt="Produit 1">
+                <div class="produit-details">
+                    <h3>Chaussure Sportive</h3>
+                    <p>€99.99</p>
+                    <button>Ajouter au panier</button>
+                </div>
+            </div>
+            <!-- Produit 2 -->
+            <div class="produit">
+                <img src="https://via.placeholder.com/300" alt="Produit 2">
+                <div class="produit-details">
+                    <h3>Chaussure Casual</h3>
+                    <p>€89.99</p>
+                    <button>Ajouter au panier</button>
+                </div>
+            </div>
+            <!-- Produit 3 -->
+            <div class="produit">
+                <img src="https://via.placeholder.com/300" alt="Produit 3">
+                <div class="produit-details">
+                    <h3>Chaussure de Ville</h3>
+                    <p>€129.99</p>
+                    <button>Ajouter au panier</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
-header .logo h1 {
-    margin: 0;
-}
+    <!-- À propos Section -->
+    <section id="about">
+        <h2>À propos</h2>
+        <p>Nous offrons les meilleures chaussures pour tous vos besoins. Du sport à la mode, en passant par le confort quotidien, nous avons ce qu'il vous faut !</p>
+    </section>
 
-nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contactez-nous</h2>
+        <form>
+            <label for="name">Nom</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
 
-nav ul li {
-    margin: 0 15px;
-}
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 Chaussures - Tous droits réservés</p>
+    </footer>
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-/* Section Hero (Carrousel) */
-.hero {
-    position: relative;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-}
-
-.carousel {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.carousel-slide {
-    min-width: 100%;
-    height: 100%;
-}
-
-.carousel-slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carousel-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-}
-
-.carousel-text h2 {
-    font-size: 36px;
-    margin-bottom: 10px;
-}
-
-/* Section Produits */
-#produits {
-    padding: 40px 0;
-    background-color: #fff;
-    text-align: center;
-}
-
-.produit-container {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-}
-
-.produit {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    text-align: center;
-    transition: transform 0.3s ease;
-}
-
-.produit:hover {
-    transform: scale(1.05);
-}
-
-.produit img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-}
-
-.produit-details h3 {
-    margin: 15px 0;
-    font-size: 20px;
-}
-
-.produit-details p {
-    font-size: 18px;
-    color: #333;
-}
-
-button {
-    background-color: #F44336; /* Rouge clair */
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #D32F2F; /* Rouge plus foncé */
-}
-
-/* Section À propos */
-#about {
-    padding: 40px 0;
-    background-color: #f7f7f7;
-    text-align: center;
-}
-
-#about h2 {
-    color: #F44336; /* Rouge clair */
-}
-
-/* Formulaire de Contact */
-#contact {
-    padding: 40px 0;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-form input, form textarea {
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-}
-
-form button {
-    padding: 15px;
-    background-color: #F44336; /* Rouge clair */
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-form button:hover {
-    background-color: #D32F2F; /* Rouge plus foncé */
-}
-
-/* Footer */
-footer {
-    background-color: #F44336; /* Rouge clair */
-    color: white;
-    text-align: center;
-    padding: 20px;
-}
+    <script src="script.js"></script>
+</body>
+</html>
