Revise index.html for personal presentation
Updated the HTML structure to reflect a personal presentation page, replacing shoe-related content with sections about the user, their skills, and professional experiences.

--- a/index.html
+++ b/index.html
@@ -3,111 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaussures - Courir / Foot Locker</title>
+    <title>Présentation de [Ton Nom]</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header Section -->
+
+    <!-- Header -->
     <header>
         <div class="logo">
-            <h1>Chaussures</h1>
+            <h1>[Ton Nom]</h1>
+            <p>Étudiant en 3ème année de Licence Commerciale</p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#produits">Nos Produits</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <!-- Hero Section (Carrousel) -->
-    <section class="hero" id="accueil">
-        <div class="carousel">
-            <div class="carousel-slide">
-                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+Sportive+1" alt="Chaussure sportive 1">
-                <div class="carousel-text">
-                    <h2>Les dernières chaussures sportives</h2>
-                    <p>Le confort et la performance à chaque pas !</p>
-                </div>
-            </div>
-            <div class="carousel-slide">
-                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+Casual+2" alt="Chaussure de ville 2">
-                <div class="carousel-text">
-                    <h2>Chic et Confort</h2>
-                    <p>Des modèles tendance pour toutes les occasions.</p>
-                </div>
-            </div>
-            <div class="carousel-slide">
-                <img src="https://via.placeholder.com/1200x400/FF5733/FFFFFF?text=Chaussure+de+Ville+3" alt="Chaussure de ville 3">
-                <div class="carousel-text">
-                    <h2>Confort au Quotidien</h2>
-                    <p>Le style et la praticité réunis !</p>
-                </div>
-            </div>
-        </div>
-        <button class="prev">Précédent</button>
-        <button class="next">Suivant</button>
+    <!-- Section Présentation -->
+    <section id="presentation">
+        <h2>Qui suis-je ?</h2>
+        <p>Bonjour ! Je suis [Ton Nom], étudiant en 3ème année de Licence Commerciale à l'ILEPS, école spécialisée dans le management et le commerce. Actuellement, je suis en alternance au sein des Bains de Seine Mauldre à Aubergenville, où j'ai la chance de travailler dans un environnement dynamique et de mettre en pratique mes connaissances théoriques.</p>
+        <p>Mon parcours m'a permis d'acquérir une solide base en gestion commerciale, marketing, communication et stratégie d'entreprise. Passionné par le commerce et les relations clients, je souhaite approfondir mes compétences dans ces domaines et les appliquer dans le monde professionnel.</p>
     </section>
 
-    <!-- Produits Section -->
-    <section id="produits">
-        <h2>Nos Produits</h2>
-        <div class="produit-container">
-            <!-- Produit 1 -->
-            <div class="produit">
-                <img src="https://via.placeholder.com/300" alt="Produit 1">
-                <div class="produit-details">
-                    <h3>Chaussure Sportive</h3>
-                    <p>€99.99</p>
-                    <button>Ajouter au panier</button>
-                </div>
-            </div>
-            <!-- Produit 2 -->
-            <div class="produit">
-                <img src="https://via.placeholder.com/300" alt="Produit 2">
-                <div class="produit-details">
-                    <h3>Chaussure Casual</h3>
-                    <p>€89.99</p>
-                    <button>Ajouter au panier</button>
-                </div>
-            </div>
-            <!-- Produit 3 -->
-            <div class="produit">
-                <img src="https://via.placeholder.com/300" alt="Produit 3">
-                <div class="produit-details">
-                    <h3>Chaussure de Ville</h3>
-                    <p>€129.99</p>
-                    <button>Ajouter au panier</button>
-                </div>
-            </div>
+    <!-- Section Compétences -->
+    <section id="competences">
+        <h2>Compétences</h2>
+        <ul>
+            <li>Gestion de la relation client</li>
+            <li>Stratégies marketing et commerciales</li>
+            <li>Analyse de marché et veille concurrentielle</li>
+            <li>Communication d'entreprise</li>
+            <li>Gestion de projet et négociation</li>
+        </ul>
+    </section>
+
+    <!-- Section Expériences -->
+    <section id="experiences">
+        <h2>Expériences professionnelles</h2>
+        <div class="experience">
+            <h3>Alternance - Bains de Seine Mauldre, Aubergenville</h3>
+            <p>Depuis septembre 2023 - Actuellement en poste</p>
+            <p>Dans le cadre de mon alternance, je participe à la gestion des relations clients et à la mise en place de stratégies commerciales pour le développement des activités des Bains de Seine Mauldre. Je suis également impliqué dans la gestion de projets marketing et la promotion des services auprès de la clientèle locale et touristique.</p>
         </div>
     </section>
 
-    <!-- À propos Section -->
-    <section id="about">
-        <h2>À propos</h2>
-        <p>Nous offrons les meilleures chaussures pour tous vos besoins. Du sport à la mode, en passant par le confort quotidien, nous avons ce qu'il vous faut !</p>
-    </section>
-
-    <!-- Contact Section -->
+    <!-- Section Contact -->
     <section id="contact">
-        <h2>Contactez-nous</h2>
-        <form>
-            <label for="name">Nom</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Envoyer</button>
-        </form>
+        <h2>Contactez-moi</h2>
+        <p>Vous pouvez me contacter par email à : <strong>[Ton Email]</strong></p>
     </section>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Chaussures - Tous droits réservés</p>
+        <p>&copy; 2025 [Ton Nom] - Tous droits réservés</p>
     </footer>
 
     <script src="script.js"></script>
