Add comments for CSS and JavaScript links
Added comments to link elements for CSS and JavaScript.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation de [Ton Nom]</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
 
@@ -56,6 +56,7 @@
         <p>&copy; 2025 [Ton Nom] - Tous droits réservés</p>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Lien vers le fichier JavaScript -->
+    <script src="script.js"></script> <!-- Le script doit être après le contenu de la page -->
 </body>
 </html>
