Update name in index.html to 'Rodrigues Matis'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Présentation de [Ton Nom]</title>
+    <title>Présentation de [Rodrigues Matis]</title>
     <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <h1>[Ton Nom]</h1>
+            <h1>[Rodrigues Matis]</h1>
             <p>Étudiant en 3ème année de Licence Commerciale</p>
         </div>
     </header>
@@ -19,7 +19,7 @@
     <!-- Section Présentation -->
     <section id="presentation">
         <h2>Qui suis-je ?</h2>
-        <p>Bonjour ! Je suis [Ton Nom], étudiant en 3ème année de Licence Commerciale à l'ILEPS, école spécialisée dans le management et le commerce. Actuellement, je suis en alternance au sein des Bains de Seine Mauldre à Aubergenville, où j'ai la chance de travailler dans un environnement dynamique et de mettre en pratique mes connaissances théoriques.</p>
+        <p>Bonjour ! Je suis [Rodrigues Matis], étudiant en 3ème année de Licence Commerciale à l'ILEPS, école spécialisée dans le management et le commerce. Actuellement, je suis en alternance au sein des Bains de Seine Mauldre à Aubergenville, où j'ai la chance de travailler dans un environnement dynamique et de mettre en pratique mes connaissances théoriques.</p>
         <p>Mon parcours m'a permis d'acquérir une solide base en gestion commerciale, marketing, communication et stratégie d'entreprise. Passionné par le commerce et les relations clients, je souhaite approfondir mes compétences dans ces domaines et les appliquer dans le monde professionnel.</p>
     </section>
 
