Update HTML structure and content for presentation

--- a/index.html
+++ b/index.html
@@ -3,101 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Présentation de Rodrigues Matis</title>
+    <title>Rodrigues Matis – Présentation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- HEADER -->
     <header>
-        <div class="logo">
-            <h1>Rodrigues Matis</h1>
-            <p>Étudiant en Licence Commerciale à l'ILEPS | En alternance aux Bains de Seine Mauldre</p>
+        <h1>Rodrigues Matis</h1>
+        <p>Étudiant en Licence Commerciale à l’ILEPS — Alternance aux Bains de Seine Mauldre</p>
+
+        <!-- Liens pros -->
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/rodriguesmatis" target="_blank">LinkedIn</a>
+            <a href="mailto:rodriguesmatis@example.com">Email</a>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#description" class="tablink active">Description</a></li>
-                <li><a href="#etudes" class="tablink">Études</a></li>
-                <li><a href="#travail" class="tablink">Travail</a></li>
-                <li><a href="#cv" class="tablink">Mon CV</a></li>
-                <li><a href="#contact" class="tablink">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <!-- Contenu des onglets -->
-    <div id="description" class="tabcontent active">
+    <!-- MENU TABS -->
+    <nav>
+        <ul>
+            <li><a href="#description" class="tablink active">Description</a></li>
+            <li><a href="#etudes" class="tablink">Études</a></li>
+            <li><a href="#travail" class="tablink">Travail</a></li>
+            <li><a href="#cv" class="tablink">CV</a></li>
+            <li><a href="#contact" class="tablink">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- CONTENUS -->
+
+    <section id="description" class="tabcontent active">
         <h2>Qui suis-je ?</h2>
         <div class="profile-info">
-            <img src="path/to/ta-photo.jpg" alt="Rodrigues Matis" class="profile-img">
+            <img src="path/to/photo.jpg" class="profile-img">
             <p>
-                Bonjour, je suis **Rodrigues Matis**, étudiant en 3ème année de Licence Commerciale à l'ILEPS, une école de commerce de renom. Passionné par l'économie, le commerce et le marketing, j'ai choisi cette voie pour développer des compétences solides en gestion, stratégie d'entreprise, et négociation commerciale.
-            </p>
-            <p>
-                Mon parcours universitaire m'a permis d'acquérir des bases solides en marketing stratégique, communication, gestion de la relation client, et analyse de marché. Ces compétences, je les applique directement dans mon alternance, où je suis immergé dans un environnement professionnel exigeant.
-            </p>
-            <p>
-                Ce parcours en alternance me permet de combiner théorie et pratique, un atout majeur pour mon avenir professionnel. À l'issue de mes études, mon objectif est de travailler dans le secteur du management commercial ou du marketing, et pourquoi pas, d'entreprendre dans le domaine du conseil en stratégie commerciale.
+                Je suis Rodrigues Matis, étudiant en 3e année de Licence Commerciale à l’ILEPS.
+                Passionné par le commerce, la négociation et la stratégie commerciale, je développe
+                mes compétences autant à l'école qu’en alternance.
             </p>
         </div>
-    </div>
+    </section>
 
-    <div id="etudes" class="tabcontent">
+    <section id="etudes" class="tabcontent">
         <h2>Mes Études</h2>
         <p>
-            Je suis actuellement en 3ème année de Licence Commerciale à l'ILEPS, une école qui me permet de bénéficier d'une formation théorique poussée tout en me préparant au monde du travail grâce à une pédagogie pratique. Au programme : stratégie marketing, gestion de la relation client, études de marché, comptabilité, et bien plus encore.
+            À l’ILEPS, j’ai appris la stratégie marketing, la relation client, la négociation,
+            ainsi que la gestion de projet. La formation est professionnalisante et orientée terrain.
         </p>
-        <p>
-            Lors de ma formation, j'ai eu l'opportunité de participer à des projets en groupe où j'ai appris à travailler en équipe, à analyser des problématiques commerciales réelles et à élaborer des solutions efficaces. J'ai aussi pu enrichir mes compétences en communication, que ce soit en présentation orale ou en rédaction de rapports professionnels.
-        </p>
-        <p>
-            Les cours sont accompagnés de cas pratiques et de simulations qui me permettent de mettre en application les concepts théoriques appris en classe. Cette expérience m'apporte une vision très concrète des enjeux commerciaux et me prépare à relever les défis d'un monde en constante évolution.
-        </p>
-    </div>
+    </section>
 
-    <div id="travail" class="tabcontent">
-        <h2>Mon Travail en Alternance</h2>
+    <section id="travail" class="tabcontent">
+        <h2>Mon Alternance</h2>
         <p>
-            En parallèle de mes études, j'effectue mon alternance au sein des Bains de Seine Mauldre à Aubergenville, un établissement de qualité dans le domaine du bien-être et du tourisme. En tant qu'assistant commercial, je participe activement à la gestion des relations clients, à la mise en place d'actions de fidélisation et à la promotion des services de l'entreprise.
+            Aux Bains de Seine Mauldre, j’assure la gestion client, la communication,
+            la fidélisation et la mise en place de projets commerciaux.
         </p>
-        <p>
-            Ce travail me permet de développer des compétences précieuses en gestion de la relation client, mais aussi en stratégie commerciale. J'ai l'opportunité de travailler sur des projets concrets, de participer à des réunions stratégiques et de contribuer à la mise en place d'actions de communication et de marketing ciblées.
-        </p>
-        <p>
-            Cette alternance est une véritable immersion dans le monde du travail, où je mets en pratique mes connaissances théoriques. Elle me permet de comprendre la réalité d'une entreprise tout en me formant sur des enjeux commerciaux de terrain.
-        </p>
-    </div>
+    </section>
 
-    <div id="cv" class="tabcontent">
+    <section id="cv" class="tabcontent">
         <h2>Mon CV</h2>
-        <p>
-            Vous pouvez télécharger mon CV en cliquant sur le lien ci-dessous :
-        </p>
-        <a href="path/to/ton-cv.pdf" download> Télécharger mon CV</a>
-    </div>
+        <a class="cv-button" href="path/to/cv.pdf" download>Télécharger mon CV</a>
+    </section>
 
-    <div id="contact" class="tabcontent">
-        <h2>Contactez-moi</h2>
-        <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
-            <label for="name">Nom :</label>
-            <input type="text" id="name" name="name" required>
+    <section id="contact" class="tabcontent">
+        <h2>Me Contacter</h2>
+        <p>Email direct : <a href="mailto:rodriguesmatis@example.com">rodriguesmatis@example.com</a></p>
+        <p>LinkedIn : <a href="https://www.linkedin.com/in/rodriguesmatis" target="_blank">Profil</a></p>
+    </section>
 
-            <label for="email">Email :</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message :</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Envoyer</button>
-        </form>
-        <p>Ou contactez-moi directement via mon <a href="https://www.linkedin.com/in/rodriguesmatis" target="_blank">LinkedIn</a></p>
-    </div>
-
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 Rodrigues Matis - Tous droits réservés</p>
+        © 2025 — Rodrigues Matis | Site personnel
     </footer>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
